# MigTech

./: .gitignore  README.md
android/: AndroidApp.cpp  AndroidApp.h  OglDefines.h  OglImage.cpp  OglImage.h  OglMatrix.cpp  OglMatrix.h  OglObject.cpp  OglObject.h  OglProgram.cpp  OglProgram.h  OglRender.cpp  OglRender.h  OglShader.cpp  OglShader.h  OslAudio.cpp  OslAudio.h  OslAudioSound.cpp  OslAudioSound.h  Platform.cpp  SimplePersist.cpp  SimplePersist.h  pch.h
android/shaders/: mtps_Color.frag  mtps_Tex.frag  mtps_TexAlpha.frag  mtvs_MovieClip.vert  mtvs_OverlayBackground.vert  mtvs_PosNoTransform.vert  mtvs_PosTexNoTransform.vert  mtvs_PosTexTransform.vert  mtvs_PosTransform.vert
core/: AnimList.cpp  AnimList.h  AudioBase.cpp  AudioBase.h  BgBase.cpp  BgBase.h  Controls.cpp  Controls.h  DemoBase.cpp  DemoBase.h  Dialog.cpp  Dialog.h  Font.cpp  Font.h  Image.h  Matrix.cpp  Matrix.h  MigBase.cpp  MigBase.h  MigConst.h  MigDefines.h  MigGame.cpp  MigGame.h  MigInclude.h  MigUtil.cpp  MigUtil.h  MovieClip.cpp  MovieClip.h  Object.h  OverlayBase.cpp  OverlayBase.h  PerfMon.cpp  PerfMon.h  PersistBase.cpp  PersistBase.h  RenderBase.cpp  RenderBase.h  ScreenBase.cpp  ScreenBase.h  Shader.h  (+3 more)
core/libpng/: pngerror.c
cuboingo/: CreditsScreen.cpp  CreditsScreen.h  CubeBase.cpp  CubeBase.h  CubeConst.h  CubeUtil.cpp  CubeUtil.h  CuboingoGame.cpp  CuboingoGame.h  DemoCuboingoScreens.cpp  DemoCuboingoScreens.h  EndGameScreens.cpp  EndGameScreens.h  FallingGrid.cpp  FallingGrid.h  GameCube.cpp  GameCube.h  GameGrid.cpp  GameGrid.h  GameOverlays.cpp  GameOverlays.h  GameScreen.cpp  GameScreen.h  GameScripts.cpp  GameScripts.h  GridBase.cpp  GridBase.h  HintGrid.cpp  HintGrid.h  Launcher.cpp  Launcher.h  LightBeam.cpp  LightBeam.h  Particles.cpp  Particles.h  PowerUp.cpp  PowerUp.h  ScoreKeeper.cpp  ScoreKeeper.h  ShadowPass.cpp  (+9 more)
cuboingo/android/cuboingo/: README.md  build.gradle  local.properties
cuboingo/android/cuboingo/app/: build.gradle
cuboingo/android/cuboingo/app/src/main/: AndroidManifest.xml
cuboingo/android/cuboingo/app/src/main/assets/: cps_Beam.frag  cps_Cube.frag  cps_Grid.frag  cps_Shield.frag  cps_Stamp.frag  cvs_Beam.vert  cvs_Cube.vert  cvs_Grid.vert  cvs_Shield.vert  cvs_Stamp.vert
cuboingo/android/cuboingo/app/src/main/cpp/: CMakeLists.txt  pch.h
cuboingo/android/cuboingo/app/src/main/res/values/: strings.xml
cuboingo/content/: AboutOverlay.xml  CreditsScreen.xml  DebugOverlay.xml  DemoGameplay2.xml  DemoGameplay3.xml  DemoGameplay4.xml  DumpLogOverlay.xml  GameScreen.xml  HighScoreOverlay.xml  LoseScreen.xml  OptionsOverlay.xml  PauseOverlay.xml  ScriptOverlay.xml  SplashScreen.xml  StartOverlay.xml  SummaryOverlay.xml  TipsOverlay.xml  WinScreen.xml  cuboingo.xml  demo1.xml  demo2_part1.xml  demo2_part2.xml  demo2_part3.xml  demo3_part1.xml  demo3_part2.xml  demo4_part1.xml  demo4_part2.xml  font_arial_cfg.xml  script1.xml  script2.xml  script3.xml  script4.xml  script5.xml  script6.xml  scripts.xml  strings.xml
cuboingo/desktop/: cuboingo.rc  cuboingo.sln  cuboingo.vcxproj  cuboingo.vcxproj.filters  desktop.xml
cuboingo/windows/: cuboingo.sln
cuboingo/windows/cuboingo/cuboingo.Shared/: cuboingo.Shared.vcxitems  cuboingo.Shared.vcxitems.filters  pch.h
cuboingo/windows/cuboingo/cuboingo.Shared/Content/: cps_Beam.hlsl  cps_Cube.hlsl  cps_Grid.hlsl  cps_Shield.hlsl  cps_Stamp.hlsl  cvs_Beam.hlsl  cvs_Cube.hlsl  cvs_Grid.hlsl  cvs_Shield.hlsl  cvs_Stamp.hlsl
cuboingo/windows/cuboingo/cuboingo.Windows/: Package.appxmanifest  cuboingo.Windows.vcxproj  cuboingo.Windows.vcxproj.filters  cuboingo.Windows_TemporaryKey.pfx
cuboingo/windows/cuboingo/cuboingo.WindowsPhone/: Package.appxmanifest  cuboingo.WindowsPhone.vcxproj  cuboingo.WindowsPhone.vcxproj.filters
testgame/: cube.cpp  cube.h  main.cpp  main.h  overlay.cpp  overlay.h  screen.cpp  screen.h  texture.cpp  texture.h
testgame/android/TestGame/: local.properties
testgame/android/TestGame/app/: build.gradle
testgame/android/TestGame/app/src/main/: AndroidManifest.xml
testgame/android/TestGame/app/src/main/assets/: SamplePixelShader.frag  SampleVertexShader.vert  TexturePixelShader.frag
testgame/android/TestGame/app/src/main/java/com/jordan/testgame/: TestGameActivity.java  TestGameLib.java  TestGameView.java
testgame/android/TestGame/app/src/main/jni/: Android.mk  Application.mk  jni_code.cpp
testgame/android/TestGame/app/src/main/res/values/: strings.xml
testgame/content/: TestOverlay.xml  TestScreen.xml  font_square721_cfg.xml  script2.xml  strings.xml  testgame.xml
testgame/desktop/: desktop.xml  mtdata.txt  pch.h  testgame.rc  testgame.sln  testgame.vcxproj  testgame.vcxproj.filters
testgame/desktop/shaders/: SampleVertexShader.hlsl
testgame/windows/: testgame.sln
testgame/windows/testgame/testgame.Shared/: testgame.Shared.vcxitems  testgame.Shared.vcxitems.filters
testgame/windows/testgame/testgame.Shared/content/: TexturePixelShader.hlsl  TextureVertexShader.hlsl
testgame/windows/testgame/testgame.Windows/: Package.appxmanifest  testgame.Windows.vcxproj  testgame.Windows.vcxproj.filters  testgame.Windows_TemporaryKey.pfx
testgame/windows/testgame/testgame.WindowsPhone/: Package.appxmanifest  testgame.WindowsPhone.vcxproj  testgame.WindowsPhone.vcxproj.filters
tools/: tools.sln
tools/fontmaker/: Resource.h  fontmaker.cpp  fontmaker.rc  fontmaker.vcxproj  fontmaker.vcxproj.filters  input.xml  stdafx.cpp  stdafx.h  worker.cpp
windows/: AppResource.h  DesktopApp.cpp  DesktopApp.h  DxDefines.h  DxImage.cpp  DxImage.h  DxMatrix.cpp  DxMatrix.h  DxObject.cpp  DxObject.h  DxRender.cpp  DxRender.h  DxShader.cpp  DxShader.h  LegacySound.cpp  LegacySound.h  LocalPersist.cpp  LocalPersist.h  Platform.cpp  RegistryPersist.cpp  RegistryPersist.h  WinApp.cpp  WinApp.h  XAudio.cpp  XAudio.h  XAudioSound.cpp  XAudioSound.h  pch.h
windows/shaders/: mtps_Color.hlsl  mtps_Tex.hlsl  mtps_TexAlpha.hlsl  mtvs_MovieClip.hlsl  mtvs_OverlayBackground.hlsl  mtvs_PosNoTransform.hlsl  mtvs_PosTexNoTransform.hlsl  mtvs_PosTexTransform.hlsl  mtvs_PosTransform.hlsl
